--- a/html/html/install/lang/deu/CREDITS.txt
+++ b/html/html/install/lang/deu/CREDITS.txt
@@ -33,6 +33,11 @@ PostNuke Theme
 created by J. Cox (http://www.dinerminor.com)
 Released under GNU General Public License (GPL)
 
+Anbindung an ADODB und Sprach-DB basiert auf:
+neXtCommerce, the XtC for your Business
+Copyright (c) 2002-2003 neXtCommerce
+http://www.neXtCommerce.de
+Released under GNU Lesser GPL library license.
 
  
 Diese Liste erhebt keinen Anspruch auf Vollständigkeit!
